--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -133,6 +133,7 @@ en:
         gdi: Is your activity affected by the Global Development Impact (GDI) policy?
         geography: Will the benefitting recipient be a region or country?
         ispf_theme: Which ISPF theme does this activity fall under?
+        ispf_partner_countries: Who are the ISPF partner countries?
         intended_beneficiaries: What are the intended beneficiaries?
         level: Add new activity
         objectives: What are the aims/objectives of this %{level}?
@@ -395,6 +396,7 @@ en:
         intended_beneficiaries: What are the intended beneficiaries?
         is_oda: Is this activity ODA or Non-ODA?
         ispf_theme: ISPF theme
+        ispf_partner_countries: ISPF partner countries
         level: Hierarchy level
         objectives: Aims/Objectives
         oda_eligibility: ODA eligibility
