Ensure ISPF partner countries cannot be blank
Also adds a default value to the activity factory as this is used in various
tests and throws errors if nil

Co-authored-by: George <george@dxw.com>

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -519,6 +519,8 @@ en:
               too_long: A maximum of 10 intended beneficiaries can be added
             ispf_theme:
               blank: Select an ISPF theme
+            ispf_partner_countries:
+              blank: Select an ISPF partner country
             level:
               blank: Select the activity type
             objectives:
