Add ISPF partner countries to activity details
Also includes an edit button, and an "add" button when on the ISPF partner
countries step of the form (e.g. if you exit the form and access the
activity details page)

Co-authored-by: George <george@dxw.com>

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -475,6 +475,7 @@ en:
         policy_marker_nutrition: Nutrition policy marker
         implementing_organisations: Implementing organisations
         ispf_theme: ISPF theme
+        ispf_partner_countries: ISPF partner countries
         tied_status_with_code: Tied status
         originating_report_id: Originating report identifier
         source_fund_code: Fund code
