Add implementing org step to activity
For ISPF-funded level D activities, partner organisation users must
provide an implementing organisation.

We’ve added this requirement as a new step in the activity journey. The
step is only shown for ISPF level D activities, and only if there is no
implementing org already associated.

More implementing orgs can always be added through the standalone “Add
implementing organisation” form, from the activity details page.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -393,6 +393,7 @@ en:
         gdi: GDI
         geography: Will the benefitting recipient be a region or country?
         identifier: Enter your unique identifier
+        implementing_organisation: Select an implementing organisation
         intended_beneficiaries: What are the intended beneficiaries?
         is_oda: Is this activity ODA or Non-ODA?
         ispf_theme: ISPF theme
