--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -594,6 +594,8 @@ en:
         invalid_aid_type: The aid type code is not valid
         invalid_fstc_applies: The free standing technical cooperation column is not valid
         invalid_policy_marker: This is not a valid code for this policy marker
+        invalid_ispf_theme: '"%{code}" is not a valid ISPF theme'
+        invalid_ispf_partner_countries: '"%{code}" is not a valid %{type} partner country'
         incomplete_parent: The parent activity is incomplete
         parent_not_found: The parent activity cannot be found
         cannot_create: There is no RODA fragment or parent activity present, so cannot create an Activity
