Add ISPF ODA activity CSV download
ISPF ODA has been added to the activity CSV columns config

The Level B activity view has been restructured to work with both non-ISPF and
ISPF ODA activities, creating two download links and upload forms. Each form now
includes a type param, which will be used in a later commit to automatically add
an `is_oda` value to ISPF activities

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -3,17 +3,17 @@ en:
   action:
     activity:
       add_child: Add child activity
-      bulk_download:
-        hint_html: "<p class='govuk-body'>This CSV contains all the columns that can be used to create or update Level B activities.</p><p class='govuk-body'>Edit it to add the values for the selected organisation's activities, then upload it through the form.</p>"
       download:
         link: Download the %{type} template
         hint_html: "<p class='govuk-body'>This CSV contains all the columns that can be used to create or update activities related to your current report.</p><p class='govuk-body'>Edit it to add the values for your organisation's activities, then upload it through the form.</p>"
+        hint_level_b_html: "<p class='govuk-body'>Use the template to ensure your data is in the correct format.</p><p class='govuk-body'>Edit it to add the values for the selected organisation's activities, then upload it through the form.</p><p class='govuk-body'>This CSV contains all the columns that can be used to create or update Level B activities.</p>"
       upload:
         button: Upload and continue
         file_missing_or_invalid: Please upload a valid CSV file
         link: Upload activities
         success: The activities were successfully imported.
       type:
+        ispf_oda: ISPF ODA
         non_ispf: GCRF/NF/OODA
   document_title:
     activity:
