Add ISPF Level B non-ODA CSV template download
This adds a template download for uploading ISPF non-ODA Level B activities

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -14,6 +14,7 @@ en:
         success: The activities were successfully imported.
       type:
         ispf_oda: ISPF ODA
+        ispf_non_oda: ISPF non-ODA
         non_ispf: GCRF/NF/OODA
   document_title:
     activity:
