--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -64,6 +64,7 @@ en:
         partner_organisation_identifier: Enter your unique identifier
         partner_organisation_identifier_level_b: Enter your unique identifier (optional)
         intended_beneficiaries: What are the intended beneficiaries?
+        no_linked_activity: No linked activity or the activity is not in RODA yet
         objectives: Aims/Objectives of the activity
         oda_eligibility:
           never_eligible: No - was never eligible
@@ -138,7 +139,6 @@ en:
         ispf_partner_countries: Who are the ISPF partner countries?
         intended_beneficiaries: What are the intended beneficiaries?
         level: Add new activity
-        linked_activity_id: What is the activity linked to this activity?
         objectives: What are the aims/objectives of this %{level}?
         oda_eligibility: Is this activity ODA eligible?
         parent: Select the parent activity
@@ -193,6 +193,7 @@ en:
         sector_category_html: For example, research, education or small to medium-sized enterprise (SME) development. Choose one of the %{link}
         title: A short title that explains the purpose of the %{level}. There is no character limit to this field. However, when this data is published to Statistics in International Development the title will be truncated at 150 characters.
         description: There is no character limit to this field. However, when this data is published to Statistics in International Development the description will be truncated at 4000 characters.
+        linked_activity_guidance: If the activity you are trying to link does not appear in the selection, it's possible it is already linked to another activity.
         level: Select the type of activity
         level_step:
           fund: The amount of funding each partner organisation will receive
