Show linked activity in summary and details

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -494,6 +494,7 @@ en:
         organisation: Organisation
         partner_organisation: Partner organisation
         is_oda: ODA or Non-ODA
+        linked_activity: Linked activity
     errors:
       models:
         activity:
