--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -5,7 +5,7 @@ en:
       add_child: Add child activity
       download:
         link: Download the %{type} template
-        hint_html: "<p class='govuk-body'>This CSV contains all the columns that can be used to create or update activities related to your current report.</p><p class='govuk-body'>Edit it to add the values for your organisation's activities, then upload it through the form.</p>"
+        hint_html: "<p class='govuk-body'>You can use the upload as many times as you need to complete your report.</p><p class='govuk-body'>Use the template to ensure your data is in the correct format. See the help centre for more details.</p><p class='govuk-body'>This CSV contains all the columns that can be used to create or update activities related to your current report.</p><p class='govuk-body'>Edit it to add the values for your organisation's activities, then upload it through the form.</p>"
         hint_level_b_html: "<p class='govuk-body'>Use the template to ensure your data is in the correct format.</p><p class='govuk-body'>Edit it to add the values for the selected organisation's activities, then upload it through the form.</p><p class='govuk-body'>This CSV contains all the columns that can be used to create or update Level B activities.</p>"
       upload:
         button: Upload and continue
